welcome.lessons.welcome.array.search.MaxValue.scala.error
maxValue:6: error: '(' expected but identifier found.
    if i>max
       ^