welcome.lessons.welcome.array.search.MaxValue.scala.code
def maxValue(nums:Array[Int]): Int = {
  var max = 0
  min = nums(0)
  for(i <- nums)
  {
    if i>max
    	max = i
  }
}